--- a/sections/template--search.liquid
+++ b/sections/template--search.liquid
@@ -1471,12 +1471,12 @@
               {%- endfor -%}
               {% assign types = search.types | reverse %}
               <div class="result-type-wrapper">
-                <p class="facets__heading result-type-heading">Result Type</p>
+                <p class="facets__heading result-type-heading">検索結果</p>
                 <details class="disclosure-has-popup facets__disclosure result-type-selector">
                   <summary class="facets__summary">
                     <div>
-                      <span class="desktop-btn-text">Select a type</span>
-                      <span class="mobile-btn-text">Result type</span>
+                      <span class="desktop-btn-text">種類を選択</span>
+                      <span class="mobile-btn-text">種類を選択</span>
                       {{ icon_caret }}
                     </div>
                   </summary>
