--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1500,10 +1500,10 @@ img.logo_overlay.js,
     color: #333;
     font-size: 13px;
 }
-.ngc-note-attr-field:nth-child(1){
+.cart .ngc-note-attr-field{
     position: relative;
 }
-.ngc-note-attr-field:nth-child(1)::after{
+.cart .ngc-note-attr-field::after{
     content: '';
     width: 10px;
     height: 10px;
