--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1516,6 +1516,9 @@ img.logo_overlay.js,
     right: 20px;
     position: absolute;
 }
+.cart .ngc-note-attr-field:nth-child(2)::after{
+    content: none;
+}
 .dynamic-checkout__content{
     width: 100%;
     margin-top: 4px;
