--- a/assets/custom.css
+++ b/assets/custom.css
@@ -127,6 +127,12 @@ h2.homepage-sections--title{
     transform: rotate(-135deg);
     margin-right: -2px;
 }
+.recently-viewed-products .swiper-button--next:not(.swiper-button-disabled):hover,
+.recently-viewed-products .swiper-button--prev:not(.swiper-button-disabled):hover{
+    background-color: white!important;
+    opacity: .8;
+}
+
 @media only screen and (min-width: 769px){
     .main-content  .recently-viewed-products{
         max-width: 1200px;
@@ -216,6 +222,11 @@ h2.homepage-sections--title{
 .swiper-button--next.swiper-button-disabled, 
 .swiper-button--prev.swiper-button-disabled{
     opacity: 0;
+}
+.product-page-related-products .swiper-button--next:not(.swiper-button-disabled):hover,
+.product-page-related-products .swiper-button--prev:not(.swiper-button-disabled):hover{
+    background-color: white!important;
+    opacity: .8;
 }
 
 @media only screen and (min-width: 769px){
