--- a/sections/template--cart.liquid
+++ b/sections/template--cart.liquid
@@ -201,6 +201,16 @@
               <del><span class="money">{{ subtotal_compare_at_price | money }}</span></del>
             </span>
           {% endif %}
+
+          <p class="announcement-bar__message h5">
+            {%- assign free_shipping_fee = 400000 -%}
+            {% if cart.total_price == 0 %}
+            <span>注文合計4,000円で送料無料</span>
+            {% else cart.total_price < free_shipping_fee %}
+            <span>送料無料まであと{{ free_shipping_fee | minus: cart.total_price | money_without_currency }}円</span>
+            {% endif %}
+          </p>
+
           <p>
             <span class="cart__subtotal-title">{{ 'cart.general.subtotal' | t }}</span>
             <span class="h3 cart__subtotal"><span class="money">{{ cart.total_price | money }}</span></span>
