--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -245,8 +245,8 @@
     }
   </script>
   {% if request.design_mode %}<script src="{{ 'theme-editor.js' | asset_url }}" defer="defer"></script>{% endif %}
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Noto+Serif+JP:wght@500&display=swap" rel="stylesheet">
+  <link link rel="preload" as="style" rel="preconnect" href="https://fonts.googleapis.com">
+  <link link rel="preload" as="style" rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Noto+Serif+JP:wght@500&display=swap" rel="stylesheet">
 </body>
 </html>
