--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -245,8 +245,18 @@
     }
   </script>
   {% if request.design_mode %}<script src="{{ 'theme-editor.js' | asset_url }}" defer="defer"></script>{% endif %}
-  <link rel="preload" as="style" href="https://fonts.googleapis.com">
-  <link rel="preload" as="style" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Noto+Serif+JP:wght@500&display=swap" rel="stylesheet">
+  
+  <link rel="preload" href="https://fonts.googleapis.com" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  </noscript>
+  <link rel="preload" href="https://fonts.gstatic.com" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  </noscript>
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Noto+Serif+JP:wght@500&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Noto+Serif+JP:wght@500&display=swap" rel="stylesheet">
+  </noscript>
 </body>
 </html>
