--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -236,7 +236,7 @@
   <script defer src="{{ 'SafeLoadScripts.js' | asset_url }}"></script>
   <script defer nomodule src="{{ 'theme.legacy.min.js' | asset_url }}"></script> 
 
-  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous" defer="defer"></script>
+  <script rel="preconnect" src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous" defer="defer"></script>
   <script src="{{ 'custom.js' | asset_url }}" defer="defer"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
