--- a/snippets/responsive-image.liquid
+++ b/snippets/responsive-image.liquid
@@ -84,6 +84,7 @@
           {{ responsive-image | img_url: 'master' }} {{ responsive-image.width }}w"
   sizes="{{ sizes }}"
   src="{{ responsive-image | img_url: '1445x' }}"
+  loading="lazy"
 />
 
 </div>
